--- a/enthusiasm.cabal
+++ b/enthusiasm.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Enthusiasm
       Lib
   other-modules:
       Paths_enthusiasm
@@ -32,6 +33,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers
+    , text
   default-language: Haskell2010
 
 executable enthusiasm-exe
@@ -43,7 +46,9 @@ executable enthusiasm-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , enthusiasm
+    , text
   default-language: Haskell2010
 
 test-suite enthusiasm-test
@@ -56,5 +61,7 @@ test-suite enthusiasm-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , enthusiasm
+    , text
   default-language: Haskell2010
