--- a/enthusiasm.cabal
+++ b/enthusiasm.cabal
@@ -34,7 +34,9 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , nonempty-containers
     , text
+    , vector
   default-language: Haskell2010
 
 executable enthusiasm-exe
@@ -48,7 +50,9 @@ executable enthusiasm-exe
       base >=4.7 && <5
     , containers
     , enthusiasm
+    , nonempty-containers
     , text
+    , vector
   default-language: Haskell2010
 
 test-suite enthusiasm-test
@@ -63,5 +67,7 @@ test-suite enthusiasm-test
       base >=4.7 && <5
     , containers
     , enthusiasm
+    , nonempty-containers
     , text
+    , vector
   default-language: Haskell2010
